--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   fluttertoast: ^8.0.9
   get: ^4.6.5
   flutter_onboarding_slider: ^1.0.8
+  flutter_stripe: ^5.1.0
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
@@ -65,6 +67,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
+    - assets/images/icons/
     - assets/mealimg/
   #   - images/a_dot_ham.jpeg
 
