--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_onboarding_slider: ^1.0.8
   flutter_stripe: ^5.1.0
   http: ^0.13.5
+  cached_network_image: ^3.2.2
 
 dev_dependencies:
   flutter_test:
