--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_stripe: ^5.1.0
   http: ^0.13.5
   cached_network_image: ^3.2.2
+  get_storage: ^2.0.3
 
 dev_dependencies:
   flutter_test:
