--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   http: ^0.13.5
   cached_network_image: ^3.2.2
   get_storage: ^2.0.3
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
