webview_flutted added with code.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   cached_network_image: ^3.2.2
   get_storage: ^2.0.3
   intl: ^0.17.0
+  webview_flutter: ^3.0.4
 
 dev_dependencies:
   flutter_test:
