--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   webview_flutter: ^3.0.4
   url_launcher: ^6.1.7
   page_transition: ^2.0.9
+  form_field_validator: ^1.1.0
 
 dev_dependencies:
   flutter_test:
