--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,9 @@ dependencies:
   firebase_core_platform_interface: 4.5.1
   purchases_flutter: ^4.4.3
   in_app_purchase: ^3.0.8
+  chewie: ^1.3.6
+  auto_orientation: ^2.2.1
+  video_player: ^2.4.9
 
 dev_dependencies:
   flutter_test:
