--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,9 @@ dependencies:
   chewie: ^1.3.6
   auto_orientation: ^2.2.1
   video_player: ^2.4.9
+  fijkplayer: ^0.10.1
+  youtube_player_flutter: ^8.1.1
+  # flutter_inappwebview: ^5.7.2+2
 
 dev_dependencies:
   flutter_test:
