--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,13 +51,14 @@ dependencies:
   form_field_validator: ^1.1.0
   native_notify: ^0.0.16
   firebase_core_platform_interface: 4.5.1
-  purchases_flutter: ^4.4.3
+  purchases_flutter: ^4.5.3
   in_app_purchase: ^3.0.8
   chewie: ^1.3.6
   auto_orientation: ^2.2.1
   video_player: ^2.4.9
   fijkplayer: ^0.10.1
   youtube_player_flutter: ^8.1.1
+  # stripe_payment: ^1.1.4
 
 dev_dependencies:
   flutter_test:
