--- a/macos/Runner/Configs/Debug.xcconfig
+++ b/macos/Runner/Configs/Debug.xcconfig
@@ -1,2 +1,2 @@
-#include "../../Flutter/Flutter-Debug.xcconfig"
+#include "package:instameal/Flutter/Flutter-Debug.xcconfig"
 #include "Warnings.xcconfig"
