--- a/macos/Runner/Configs/Release.xcconfig
+++ b/macos/Runner/Configs/Release.xcconfig
@@ -1,2 +1,2 @@
-#include "../../Flutter/Flutter-Release.xcconfig"
+#include "package:instameal/Flutter/Flutter-Release.xcconfig"
 #include "Warnings.xcconfig"
