--- a/android/build.gradle
+++ b/android/build.gradle
@@ -18,7 +18,7 @@ allprojects {
     }
 }
 
-rootProject.buildDir = 'package:instameal/build'
+rootProject.buildDir = '../build'
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
 }
