--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+2
+version: 1.0.0+5
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -59,6 +59,8 @@ dependencies:
   fijkplayer: ^0.10.1
   youtube_player_flutter: ^8.1.1
   dio: ^4.0.6
+  path_provider: ^2.0.11
+  share_plus: ^6.3.0
   # stripe_payment: ^1.1.4
 
 dev_dependencies:
