--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+9
+version: 1.0.0+10
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -52,7 +52,7 @@ dependencies:
   native_notify: ^0.0.16
   firebase_core_platform_interface: 4.5.1
   purchases_flutter: ^4.5.3
-  in_app_purchase: ^3.0.8
+  # in_app_purchase: ^3.0.8
   chewie: ^1.3.6
   auto_orientation: ^2.2.1
   video_player: ^2.4.9
@@ -61,6 +61,7 @@ dependencies:
   dio: ^4.0.6
   path_provider: ^2.0.11
   share_plus: ^6.3.0
+  modal_progress_hud: ^0.1.3
   # stripe_payment: ^1.1.4
 
 dev_dependencies:
