--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
   fluttertoast: ^8.0.9
   get: ^4.6.5
   flutter_onboarding_slider: ^1.0.8
-  flutter_stripe: ^5.1.0
+  # flutter_stripe: ^5.1.0
   http: ^0.13.5
   cached_network_image: ^3.2.2
   get_storage: ^2.0.3
