--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+14
+version: 1.0.0+15
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -49,7 +49,7 @@ dependencies:
   url_launcher: ^6.1.7
   page_transition: ^2.0.9
   form_field_validator: ^1.1.0
-  native_notify: ^0.0.16
+  # native_notify: ^0.0.16
   firebase_core_platform_interface: 4.5.1
   purchases_flutter: ^4.5.3
   # in_app_purchase: ^3.0.8
